WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
297115
[WPE] WPEViewWayland.cpp:602:15: warning: variable 'annotator' set but not used [-Wunused-but-set-variable]
https://bugs.webkit.org/show_bug.cgi?id=297115
Summary
[WPE] WPEViewWayland.cpp:602:15: warning: variable 'annotator' set but not us...
Fujii Hironori
Reported
2025-08-08 06:42:29 PDT
GCC and Clang warning: [3630/9158] Building CXX object Source/WebKit/WPEPlatform/wpe/wayland/CMakeFiles/WPEPlatformWayland.dir/WPEViewWayland.cpp.o /home/fujii/webkit/wb/Source/WebKit/WPEPlatform/wpe/wayland/WPEViewWayland.cpp:602:15: warning: variable 'annotator' set but not used [-Wunused-but-set-variable] 602 | if (auto* annotator = SysprofAnnotator::singletonIfCreated()) { | ^ 1 warning generated.
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2025-08-08 06:42:41 PDT
Clang warning: In file included from /home/fujii/webkit/wb/WebKitBuild/WPE/Release/DerivedSources/WebKit/unified-sources/UnifiedSource-88d1702b-32.cpp:8: /home/fujii/webkit/wb/Source/WebKit/UIProcess/XR/openxr/OpenXRLayer.cpp:153:27: error: suggest braces around initialization of subobject [-Werror,-Wmissing-braces] 153 | .physicalSize = { static_cast<uint16_t>(m_swapchain->width()), static_cast<uint16_t>(m_swapchain->height()) }, | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ | { } 1 error generated.
Fujii Hironori
Comment 2
2025-08-08 06:55:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49115
EWS
Comment 3
2025-08-08 07:25:14 PDT
Committed
298390@main
(26242a91ad25): <
https://commits.webkit.org/298390@main
> Reviewed commits have been landed. Closing PR #49115 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug