[WPE] WPEViewWayland.cpp:602:15: warning: variable 'annotator' set but not used [-Wunused-but-set-variable] https://bugs.webkit.org/show_bug.cgi?id=297115

Unreviewed warning fix. Removed an unused variable.
Added braces around initialization of subobject.

* Source/WebKit/UIProcess/XR/openxr/OpenXRLayer.cpp:
(WebKit::OpenXRLayerProjection::startFrame):
* Source/WebKit/WPEPlatform/wpe/wayland/WPEViewWayland.cpp:

Canonical link: https://commits.webkit.org/298390@main